--- a/code/zzuhi/session1/EDA 사전과제.ipynb
+++ b/code/zzuhi/session1/EDA 사전과제.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9341010d-e964-477d-98a4-b9ed90d4d225",
+   "id": "1eca9229-d051-4c91-8ebc-d48a975a5947",
    "metadata": {},
    "source": [
     "[session 2] EDA 사전과제"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fd3e9d2-52c7-4273-b473-32907d80a4b7",
+   "id": "8ea0e0ee-4abc-4c7d-b0b0-333c6db4b153",
    "metadata": {},
    "source": [
     "0. 데이터 분석 프로세스"
@@ -18,19 +18,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a313ba0-5f67-4500-b998-6fefc06f8ab3",
+   "id": "aa9ad677-fa45-4ead-b8e3-b256e25115fc",
    "metadata": {},
    "source": [
     "데이터 수집 - 데이터 탐색 - 데이터 전처리 - 데이터 모델링\n",
     "\n",
-    "* 데이터 탐색 (EDA) : 수집한 데이터의 특성을 여러 가지 방식으로 파악하는 것\n",
-    "* 데이터 전처리 : 데이터 분석을 위해 데이터를 가공하는 것 (결측치, 이상치 처리)\n",
-    "* 데이터 모델링 : 데이터로부터 정보를 추출하기 위해 목적에 맞는 모델을 구축하는 것"
+    "- 데이터 탐색 (EDA) : 수집한 데이터의 특성을 여러 가지 방식으로 파악하는 것\n",
+    "- 데이터 전처리 : 데이터 분석을 위해 데이터를 가공하는 것 (결측치, 이상치 처리)\n",
+    "- 데이터 모델링 : 데이터로부터 정보를 추출하기 위해 목적에 맞는 모델을 구축하는 것"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfebc227-661e-4c93-8554-6c632c5fa643",
+   "id": "61059213-4dae-4134-ac88-e706df263ff7",
    "metadata": {},
    "source": [
     "-----\n",
@@ -39,26 +39,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5f708eb-21fc-4018-8992-149e2e576026",
+   "id": "bccba2a1-15ce-4e93-bc3f-e65067e2c61b",
    "metadata": {},
    "source": [
-    "*** 핵심 키워드 : 탐색, 이해\n",
-    "\n",
+    "*** 핵심 키워드 : 탐색, 이해"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f345a9c7-c8cd-4946-bc89-7baa1580c525",
+   "metadata": {},
+   "source": [
     "(1) 대상\n",
     "- 일변량 : 변수 1개\n",
     "- 다변량 : 변수 여러 개 (변수들 간 관계 파악)\n",
-    "\n",
+    "  \n",
     "(2) 종류\n",
     "- 시각화 : 차트, 그림 (장점 : 형태 파악 용이)\n",
     "- 비시각화 : 수치 통계 (장점 : 정확한 값 파악 가능)\n",
-    "\n",
+    "  \n",
     "(3) 유형\n",
     "- 일변량 비시각화 : 빈도표, 기술 통계량\n",
     "- 일변량 시각화 : 파이차트, 막대그래프, 히스토그램, 박스플롯\n",
     "- 다변량 비시각화 : 교차표, 상관계수\n",
     "- 다변량 시각화 : 모자이크플롯, 박스플롯, 평행좌표, 산점도\n",
-    "\n",
-    "\n",
+    "  \n",
     "    - 시각화 - '전체적으로' 살펴보는 것\n",
     "    - 일변량 - 하나의 데이터 살펴보는 것\n",
     "    - 다변량 - 둘 이상의 변수 간 관계 살펴보는 것"
@@ -66,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0dbc37-c59f-48c7-80ea-4281c502e370",
+   "id": "7e9f8cc2-c47b-4f6e-825a-5baf0faf1e8c",
    "metadata": {},
    "source": [
     "-----\n",
@@ -75,53 +80,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a81a82-62e5-403b-b007-ba6ddd0f6fa9",
+   "id": "78f7f7e3-ac5f-4c2c-947f-8f72803b56d3",
    "metadata": {},
    "source": [
     "- 읽기 : 데이터를 불러오는 것\n",
     "- 쓰기 : 새로운 데이터를 만드는 것\n",
     "\n",
     "(1) 절대경로와 상대경로\n",
+    "\n",
     "- 절대경로 : 해당 파일까지의 모든 경로 (처음~목적지)\n",
-    "ex) C:/users/juu/desktop/insight-12th\n",
+    "    - ex) C:/users/juu/desktop/insight-12th\n",
     "- 상대경로 : 현재 작업 중인 디렉터리 기준으로 상대적으로 표현되는 경로 (상하위 디렉터리)\n",
-    "ex) 현재(./) 상위(../) 최상위(/) 하위(이름)\n",
+    "    - ex) 현재(./) 상위(../) 최상위(/) 하위(이름)\n",
     "\n",
     "(2) 데이터 입출력\n",
     "- 파일 형식에 따라 읽고 쓸 때 사용하는 함수 다름\n",
-    "- 읽기는 read_(  ), 쓰기는 to_(  )\n",
+    "- 읽기는 read_( ), 쓰기는 to_( )\n",
     "- 파일 형식 : csv, json, html, excel, sql 등\n",
     "\n",
     "(3) CSV와 EXCEL\n",
     "- CSV : 데이터를 쉼표(,)로 구분, 크기 작음, 압축 용이 -> 가장 많이 사용\n",
-    "- EXCEL : 데이터프레임 형태 (행/열), 특정 시트 선택하여 불러오기 가능, 여러 시트는 list로 불러오기 가능\n",
-    "-> 둘 다 dataframe 형식으로 불러오기 가능"
+    "- EXCEL : 데이터프레임 형태 (행/열), 특정 시트 선택하여 불러오기 가능, 여러 시트는 list로 불러오기 가능 -> 둘 다 dataframe 형식으로 불러오기 가능"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f76e5c7-1d4a-459e-86f7-3e5a91637e77",
+   "id": "c6c48ba0-70ef-436b-a275-cff7e3b87989",
    "metadata": {},
    "source": [
     "-----\n",
-    "3. 전처리"
+    "3. 전처리\n",
+    "\n",
+    "데이터를 손질하는 과정"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "85531df3-f050-4ee8-a87c-10a918327c65",
+   "id": "0a6e8485-915f-4215-b961-013c5141b954",
    "metadata": {},
    "source": [
-    "데이터를 손질하는 과정\n",
     "- 정제 : 결측값 보완, 이상값 제거\n",
     "- 변환 : 일관성 확보, 중복 최소화\n",
     "- 필터링 : 오류 삭제 및 보정\n",
-    "- 통합 : 유사한 성질의 데이터 연계\n",
+    "- 통합 : 유사한 성질의 데이터 연계"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7291ccc4-c92e-44bf-9c41-f1eb51c8b566",
+   "metadata": {},
+   "source": [
+    "결측값 : 데이터 수집 과정에서 측정되지 않거나 누락된 데이터 (NaN, ?, 0) \n",
+    "- 처리해야 하는 이유 : 변수 간 관계 왜곡 방지\n",
     "\n",
-    "- 결측값 : 데이터 수집 과정에서 측정되지 않거나 누락된 데이터 (NaN, ?, 0)\n",
-    "-> 처리해야 하는 이유 : 변수 간 관계 왜곡 방지\n",
     "\n",
     "(1) 결측값 확인\n",
+    "\n",
     "- info() : 결측값 제외한 개수 보여줌\n",
     "- value_counts(dropna=False) : 결측값 포함한 전체 데이터 보여줌\n",
     "- isnull() : 누락이면 True, 유효하면 False\n",
@@ -129,33 +143,48 @@
     "- replace() : '0'이나 '?'을 NaN으로 변환\n",
     "\n",
     "(2) 결측값 처리\n",
-    "삭제\n",
-    "  - dropna() : 결측값 포함 레이블 제거\n",
-    "  - 행 삭제, 열 삭제, 전체 삭제, 부분 삭제\n",
-    "  - 결측값이 무작위로 발생한 경우에 사용\n",
-    "대체\n",
-    "  - fillna() : 결측값 대체\n",
-    "  - 일괄 대체, 유사 유형 대체\n",
-    "  - 평균값, 최빈값 등을 활용\n",
     "\n",
-    "- 이상치 : 관측된 데이터의 범위에서 많이 벗어난 값\n",
-    "-> 처리해야 하는 이유 : 데이터 분석에 큰 영향 미칠 수 있기 때문\n",
+    "- 삭제\n",
+    "    - dropna() : 결측값 포함 레이블 제거\n",
+    "    - 행 삭제, 열 삭제, 전체 삭제, 부분 삭제\n",
+    "    - 결측값이 무작위로 발생한 경우에 사용\n",
+    "    \n",
+    "- 대체\n",
+    "    - fillna() : 결측값 대체\n",
+    "    - 일괄 대체, 유사 유형 대체\n",
+    "    - 평균값, 최빈값 등을 활용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec1f9c4-d05a-494c-9d16-49c947260b16",
+   "metadata": {},
+   "source": [
+    "이상치 : 관측된 데이터의 범위에서 많이 벗어난 값\n",
+    "- 처리해야 하는 이유 : 데이터 분석에 큰 영향 미칠 수 있기 때문\n",
     "\n",
     "(1) 이상치 확인\n",
+    "\n",
     "- describe() : 통계\n",
     "- boxplot() : 시각화\n",
     "- Z-score : 표준편차\n",
     "- IQR : 사분위 범위\n",
     "\n",
     "(2) 이상치 제거\n",
-    "- 삭제 (단순 오타, 비현실적인 응답, 처리 과정에서의 오류) \n",
+    "- 삭제 (단순 오타, 비현실적인 응답, 처리 과정에서의 오류)\n",
     "- 대체 (절대적인 숫자 작은 경우)\n",
     "- 변수화 (자연 발생한 경우 - 삭제 X, 변수화 통한 파악)\n",
-    "- 리샘플링 (자연 발생한 경우 - 분리하여 모델 형성)\n",
-    "\n",
-    "- 피처 엔지니어링 : 피처(변수)들의 형태를 변경하거나 처리하는 것\n",
-    "    - 데이터 전처리의 마지막 단계\n",
-    "    - 새로운 변수의 추가 없이, 기존 변수를 더 유용하게 만드는 것\n",
+    "- 리샘플링 (자연 발생한 경우 - 분리하여 모델 형성)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f6aef78-d491-4845-ac0f-36c595cb3eef",
+   "metadata": {},
+   "source": [
+    "피처 엔지니어링 : 피처(변수)들의 형태를 변경하거나 처리하는 것\n",
+    "- 데이터 전처리의 마지막 단계\n",
+    "- 새로운 변수의 추가 없이, 기존 변수를 더 유용하게 만드는 것\n",
     "\n",
     "(1) 레이블인코딩 / 원핫인코딩\n",
     "- [텍스트->숫자] 변경 작업\n",
@@ -178,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a0375c0-f8a0-4122-9d75-f4fb1c676bbd",
+   "id": "2be4c161-5332-46fa-b7cc-1396f0646d64",
    "metadata": {},
    "source": [
     "-----\n",
@@ -187,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9fd543-ecbb-435b-af2b-9462c21e6bdd",
+   "id": "012b1ce0-c385-480b-8ad3-57aa8f227978",
    "metadata": {},
    "source": [
     "데이터의 패턴, 관계, 추세 등을 쉽게 파악하기 위해 시각적 요소로 변환하는 것"
@@ -195,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc9e965-f9ec-4bcd-95dd-bdfae513cab6",
+   "id": "bcba1a52-5357-486e-aff6-67b23d49f124",
    "metadata": {},
    "source": [
     "- matplotlib, seaborn 라이브러리 사용\n",
